# OTGroundTruther

./: .flake8  .gitignore  OTGroundTruther.sh  OTGroundtruther.bat  README.md  TUDCam01_sections.otflow  TUDCam02_sections.otflow  __main__.py  config.py  flowfile_cam1.otflow  flowfile_cam2.otflow  gui.py  install.bat  install.sh  install_dev.bat  install_dev.sh  install_win_py39.bat  main.py  requirements-dev.txt  requirements.txt  setup.cfg  test.py
OTGroundTruther/: __main__.py  cli.py  road_user_classes.yaml  road_user_classes_early.yaml  road_user_classes_old.yaml  road_user_classes_v1_2.yaml
OTGroundTruther/gui/: constants.py  dialogs.py  frame_canvas.py  frame_counts.py  frame_treeview_counts.py  gui.py  key_assignment.py  menu.py  presenter_interface.py
OTGroundTruther/model/: abc_classes.py  application.py  config.py  coordinate.py  count.py  datastore.py  ellipse.py  event.py  model.py  overlayed_frame.py  parse.py  road_user_class.py  section.py  state.py  video.py
OTGroundTruther/presenter/: canvas_event_handler.py  gui_interface.py  model_initializer.py  presenter.py  resize.py  state.py
OTGroundTruther/view/: constants.py  frame_canvas.py  gui.py  main_application.py  presenter_interface.py  viewmodel.py
helpers/: canvas.py  count.py  count_manipulation.py  datamanagement.py  image_alteration.py  objectstorage.py  resize.py  section.py  video.py  view_activecount.py  view_gt.py  view_section.py
helpers/count/: count.py  count_manipulation.py
tests/data/: flows.otflow  (+7 more)
view/: canvas.py  config.py  view_activecount.py  view_gt.py  view_section.py
(+10 files in other folders)
