[metadata]
name=OTGroundTruther

[options]
package_dir=
    =OTGroundTruther
packages=find:

[options.packages.find]
where=OTGroundTruther
exclude=tests/*

[flake8]
max-line-length=88
docstring-convention=google
extend-ignore=E203

[isort]
profile=black

[mypy]
ignore_missing_imports = true
;ignore_missing_imports_per_module = true
;disallow_untyped_defs = true
